load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "HomeBase",
    module_name = "HomeBase",
    srcs = [
        "HomeCollectionViewCell.swift",
        "HomeInterface.swift",
        "HomeSectionController.swift",
        "HomeSectionModel.swift",
        "HomeViewController.swift",
    ],
    deps = [
        "//ios-app/third-party/IGListKit",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "Sandbox",
    module_name = "Sandbox",
    srcs = ["HomeSandbox.swift"],
    deps = [
        "//ios-app/Source/Modules/Home/Impl:Home",
        "//ios-app/Source/Sandbox:SandboxInterface"
    ],
    visibility = ["//visibility:public"],
)
