load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_library",
    "swift_test",
)

swift_library(
    name = "Home",
    module_name = "Home",
    srcs = [
        "Impl/HomeBuilder.swift",
        "Impl/HomeInteractor.swift",
        "Impl/HomePresenter.swift",
        "Impl/HomeRouter.swift",
    ],
    deps = [
        ":HomeBase",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "HomeBase",
    module_name = "HomeBase",
    srcs = [
        "HomeInterface.swift",
        "Models/HomeSectionModel.swift",
        "Views/HomeCollectionViewCell.swift",
        "Views/HomeSectionController.swift",
        "Views/HomeViewController.swift",
    ],
    deps = [
        "//ios-app/third-party/IGListKit",
    ],
)

swift_test(
    name = "Tests",
    srcs = [
        "Tests/HomeTests.swift",
    ],
    deps = [
        ":Home",
    ],
)

swift_library(
    name = "Sandbox",
    module_name = "Sandbox",
    srcs = ["HomeSandbox.swift"],
    deps = [
        ":Home",
        "//ios-app/Source/Sandbox:SandboxInterface"
    ],
    visibility = ["//visibility:public"],
)
