load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Home",
    module_name = "Home",
    srcs = ["HomeBuilder.swift"],
    visibility = ["//visibility:public"],
    deps = [
        ":HomeInteractor",
        ":HomePresenter",
        ":HomeRouter",
        "//ios-app/Source/Modules/Home:HomeBase",
    ],
)

swift_library(
    name = "HomeInteractor",
    module_name = "HomeInteractor",
    srcs = ["HomeInteractor.swift"],
    visibility = ["//visibility:public"],
    deps = ["//ios-app/Source/Modules/Home:HomeBase"],
)

swift_library(
    name = "HomePresenter",
    module_name = "HomePresenter",
    srcs = ["HomePresenter.swift"],
    visibility = ["//visibility:public"],
    deps = ["//ios-app/Source/Modules/Home:HomeBase"],
)

swift_library(
    name = "HomeRouter",
    module_name = "HomeRouter",
    srcs = ["HomeRouter.swift"],
    visibility = ["//visibility:public"],
    deps = ["//ios-app/Source/Modules/Home:HomeBase"],
)